[package]
name = "copying"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.23" }
dyn-clone = "1.0.10"
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = "0.2.5"
log = "0.4.17"
rand = { version = "0.8.5" }
# # erased-serde = "0.3.24"
# serde = { version = "1.0.152", features = ["derive"] }
# serde_json = "1.0.91"
# serde_yaml = "0.9.16"
# tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
# tonic = "0.8.3"
typetag = "0.2.4"
wasm-bindgen = "0.2.83"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }


strum = "0.24.1"
enum-iterator = "1.2.0"
thiserror = "1.0.38"

# Has to be disabled to run in browser...
simple-logging = "2.0.2"
guard = "0.5.1"

#[lib]
#crate-type = ["cdylib", "rlib"]
